Fix button text colour on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,8 @@
 }
 
 * {
+  /* Fix button colours on iOS Safari */
+  color: var(--text-white);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
